tests/conc/reject/chan_ret.ty
fn mk() -> Channel(int):
    ch := channel(int, 4)
    return ch
fn main():
    print("x")
